--- a/style.css
+++ b/style.css
@@ -1,35 +1,95 @@
-.grid-container {
-  display: grid;
-  grid-template-columns: repeat(12, 1fr);
-  grid-template-rows: auto auto auto auto auto auto;
-  height: auto;
-  align-items: center;
+
+.top-panel {
+  display: flex;
+    flex-direction: row;
+    align-items: flex-start;
+    height: 336px;
+    background: #ECF4F8;
 }
 
-.span-12-columns {
-  padding: 48px;
-  max-width: 1024px;
+.top {
+  display: flex;
+    flex-direction: row;
+    padding: 56px 0px 0px; 
+    gap: 56px;
+    max-width: 1024px;
+    height: 280px;
+    left: 448px;
+    top: 0px;
+    margin: auto;
+    padding-left: 56px;
+    padding-right: 56px;
+}
+
+.title {
+  display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 0px;
+  
+    width: 494px;
+    height: 132px;
+}
+
+img {
+  height: 280px;
+  width: 260px;
 }
 
 header {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 80px;
-  font-weight: 900;
-  color: #333333;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-weight: 900;
+    font-size: 80px;
+    line-height: 94px;
+    color: #333333;
+    flex: none;
+    order: 0;
+    flex-grow: 0;
 }
 sub {
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-  font-size: 32px;
-  font-weight: 600;
-  color: #333333;
+  width: 500px;
+    height: 38px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+    font-weight: 600;
+    font-size: 32px;
+    line-height: 38px;
+    color: #333333;
 }
+
+Button {
+    display: flex;
+    flex-direction: column;
+    align-items: flex-start;
+    padding: 12px;
+
+    width: 141px;
+    height: 48px;
+  
+    background: #2B65BC;
+    border-radius: 4px;
+
+    margin-top: 44px;
+    font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+        Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+      font-size: 16px;
+      font-weight: 400;
+      color: white;
+}
+
 h1 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 40px;
   font-weight: 900;
+  margin-top: 56px;
+  max-width: 1024px;
+  margin: auto;
+  margin-top: 56px;
+  margin-bottom: 24px;
+  padding-left: 56px;
+  padding-right: 56px;
   color: #333333;
 }
 p {
@@ -37,14 +97,22 @@ p {
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
   font-weight: 400;
+  max-width: 1024px;
+  margin: auto;
+  padding-left: 56px;
+  padding-right: 56px;
   color: #333333;
 }
 
-li {
+ul {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 16px;
   font-weight: 400;
+  max-width: 1024px;
+  margin: auto;
+  padding-left: 86px;
+  padding-right: 56px;
   color: #333333;
 }
 
@@ -52,14 +120,46 @@ h2 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 24px;
-  font-weight: 900;
+  font-weight: 600;
+  max-width: 1024px;
+  margin: auto;
+  margin-top: 24px;
+  margin-bottom: 24px;
+  padding-left: 56px;
+  padding-right: 56px;
   color: #333333;
-}
+} 
 
 h3 {
   font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
     Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
+  font-size: 24px;
+  font-weight: 600;
+  max-width: 1024px;
+  margin: auto;
+  margin-bottom: 24px;
+  margin-top: 56px;
+  padding-left: 56px;
+  padding-right: 56px;
+  color: #333333;
+}
+
+h4 {
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
+    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   font-size: 40px;
   font-weight: 900;
+  max-width: 1024px;
+  margin: auto;
+  margin-top: 56px;
+  margin-bottom: 56px;
+  padding-left: 56px;
+  padding-right: 56px;
   color: #219653;
+}
+
+body {
+margin-left: auto;
+margin-right: auto;
+margin-top: auto;
 }
