--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@ body {
 }
 
 .col2 {
- /* padding-left: 32px; */
+ padding-left: 16px;
  padding-right: 32px;
  padding-top: 80px;
 }
@@ -97,6 +97,7 @@ img {
  padding-right: 12px;
  border-radius: 4px;
  background-color: #ECF4F8; 
+ /* box-shadow: 0px 0px 40px 2px rgba(0, 0, 0, 0.25); */
 }
 
 .actions {
