--- a/style.css
+++ b/style.css
@@ -26,7 +26,7 @@ padding: 0%;
 
 .About {
  grid-column: span 2;
- padding-top: 24px;
+ padding-top: 48px;
  padding-bottom: 24px;
  margin-left: 32px;
  margin-right: 32px;
@@ -105,7 +105,7 @@ img {
 }
 
 .actions {
- padding-top: 40px;
+ padding-top: 32px;
  padding-bottom: 32px;
 }
 
@@ -259,6 +259,16 @@ font-weight: 600;
 font-size: 18px;
 line-height: 24px;
 color: #031636;
+}
+
+p {
+   margin: auto;
+   font-family: roboto, sans-serif;
+   font-style: normal;
+   font-weight: 400;
+   font-size: 18px;
+   line-height: 24px;
+   color: #031636;
 }
 
 .About {
