--- a/style.css
+++ b/style.css
@@ -194,6 +194,18 @@ p {
  padding-left: 16px;
  cursor: pointer;
 }
+
+.inLine {
+   color: #2B65BC;
+   cursor: pointer;
+   text-decoration: none;
+}
+
+.inLine:hover {
+   color: #114A9E;
+   text-decoration: underline;
+}
+
 .link:hover {
    color: #114A9E;
    text-decoration: underline;
