--- a/style.css
+++ b/style.css
@@ -1,287 +1,3 @@
-
-
-/* body {
-   margin: auto;
-   max-width: 842px; 
-   width: 100%;
-   width: 100vw; 
-}
-
-.grid {
-  display: grid;
-  grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
-}
-
-.img src{
-padding: 0%;
-}
-
-.col1 {
-  padding-left: 32px;
-  padding-right: 32px;
-  width: 260px;
-}
-
-.col2 {
-  padding-left: 16px;
-  padding-right: 32px;
-  padding-top: 80px;
-  align-self: center;
-}
-
-.About {
- grid-column: span 2;
- padding-top: 48px;
- padding-bottom: 24px;
- margin-left: 32px;
- margin-right: 32px;
-
-}
-
-.Process {
- grid-column: span 2;
- padding-top: 24px;
- padding-bottom: 8px;
- margin-left: 32px;
- margin-right: 32px;
-}
-
-.Work1 {
- grid-column: span 2;
- padding-top: 24px;
- padding-bottom: 24px;
- margin-left: 32px;
- margin-right: 32px;
-}
-
-.Work2 {
- grid-column: span 2;
- padding-top: 24px;
- padding-bottom: 24px;
- margin-left: 32px;
- margin-right: 32px;
-}
-
-.Work3 {
- grid-column: span 2;
- padding-top: 24px;
- padding-bottom: 24px;
- margin-left: 32px;
- margin-right: 32px;
-}
-
-.Work4 {
- grid-column: span 2;
- padding-top: 24px;
- padding-bottom: 24px;
- margin-left: 32px;
- margin-right: 32px;
-}
-
-.last {
- grid-column: span 2;
- padding-top: 24px;
- margin-bottom: 48px;
- margin-left: 32px;
- margin-right: 32px;
- color: #031636;
-}
-
-li {
-margin: auto;
-font-family: roboto, sans-serif;
-font-style: normal;
-font-weight: 400;
-font-size: 16px;
-line-height: 24px;
-color: #031636;
-}
-
-img {
- margin: auto;
- height: 280px;
- width: 260px;
- padding-top: 32px;
- padding-bottom: 0px;
- padding-left: 12px;
- padding-right: 12px;
- background-color: #ECF4F8; 
-}
-
-.actions {
- padding-top: 32px;
- padding-bottom: 32px;
-}
-
-h1 {
- margin: auto;
- font-family: roboto, sans-serif;
- font-weight: 900;
- font-size: 80px;
- line-height: 94px;
- color: #031636;
-}
-
-h2 {
- margin: auto;
- font-family: roboto, sans-serif;
- font-weight: 800;
- font-size: 32px;
- line-height: 38px;
- color: #031636;
-}
-
-h3 {
- margin: auto;
- font-family: roboto, sans-serif;
- font-style: normal;
- font-weight: 600;
- font-size: 24px;
- line-height: 28px;
- color: #031636;
-}
-
-p {
- margin: auto;
- font-family: roboto, sans-serif;
- font-style: normal;
- font-weight: 400;
- font-size: 16px;
- line-height: 24px;
- color: #031636;
-}
-
-.btn {
- padding-left: 12px;
- padding-right: 12px;
- padding-top: 11px;
- padding-bottom: 8px;
- align-content: center;
- background: #2B65BC;
- border-radius: 4px;
- border: none;
- cursor: pointer;
- font-family: roboto, sans-serif;
- font-style: normal;
- font-weight: 400;
- font-size: 16px;
- line-height: 0px;
- text-decoration: none;
- color: white;
-}
-
-.fa-arrow-up-right-from-square {
-   padding-left: 8px;
-}
-
-.fa-brands {
- padding-right: 8px;
- font-size: 16px;
-  line-height: 0px;
- align-content: center;
-}
-
-.btn:hover {
- background-color: #114A9E;
- text-decoration: underline;
-}
-
-.link {
- padding-left: 24px;
- font-family: roboto, sans-serif;
- font-style: normal;
- text-decoration: none;
- font-weight: 400;
- font-size: 16px;
- line-height: 0px;
- color: #2B65BC;
- padding-left: 16px;
- cursor: pointer;
-}
-
-.link:hover {
-   color: #114A9E;
-   text-decoration: underline;
-}
-
-.inLine {
-   color: #2B65BC;
-   text-decoration: none;
-}
-
-.inLine:hover {
-   color: #114A9E;
-   text-decoration: underline;
-   cursor: pointer;
-}
-
-@media screen and (max-width: 841px) {
-   .grid {
-      display: flex;
-      flex-direction: column;
-      justify-content: center;
-      width: 100%;
-   }
-}
-
-   .col1,
-   .col2 {
-      width: 100%;
-      margin: 0 auto;
-   }
-}
-
-.col1 {
-   background-color: #ECF4F8;
-   margin-top: 32px;
-}
-
-.col2 {
-   padding-top: 24px;
-   padding-left: 32px;
-   min-width: 280px;
-   align-items: left;
-}
-
-  h1 {
-   margin: auto; 
-   font-family: roboto, sans-serif;
-   font-style: normal;
-   font-weight: 900;
-   font-size: 50px;
-   line-height: 58px;
-   color: #031636;
-  }
-
-  h2 {
- margin: auto;
- font-family: roboto, sans-serif;
- font-style: normal;
- font-weight: 800;
- font-size: 24px;
- line-height: 28px;
- color: #031636;
-}
-
-h3 {
-margin: auto;
-font-family: roboto, sans-serif;
-font-style: normal;
-font-weight: 600;
-font-size: 18px;
-line-height: 24px;
-color: #031636;
-}
-
-.About {
- margin-top: 0px;
-}
-
-.btn {
- padding-top:8px;
-} */
-
-
 body {
    margin: auto;
    max-width: 842px;
@@ -291,18 +7,28 @@ body {
 
 .grid {
    display: grid;
-   grid-template-columns: repeat(auto-fit, minmax(260px, 1fr));
+   grid-template-columns: repeat(auto-fit, minmax(326px, 1fr));
 }
 
 .img src {
    padding: 0%;
 }
 
+/* .col1 {
+   padding-left: 32px;
+   padding-right: 32px;
+   padding-top: 32px;
+   width: 260px;
+} */
+
 .col1 {
    padding-left: 32px;
    padding-right: 32px;
    padding-top: 32px;
    width: 260px;
+   margin: auto;
+   display: flex;
+   justify-content: center;
 }
 
 .col2 {
@@ -424,7 +150,8 @@ h3 {
    font-size: 18px;
    line-height: 24px;
    color: #031636;
-}
+} 
+
 
 p {
    margin: auto;
