--- a/style.css
+++ b/style.css
@@ -156,7 +156,7 @@ p {
    color: #031636;
 }
 
-.btn {
+.primBtn {
    padding-left: 12px;
    padding-right: 12px;
    padding-top: 8px;
@@ -175,6 +175,36 @@ p {
    color: white;
 }
 
+.primBtn:hover {
+   background-color: #114A9E;
+   text-decoration: underline;
+}
+
+.secBtn {
+   padding-left: 12px;
+   padding-right: 12px;
+   padding-top: 8px;
+   padding-bottom: 8px;
+   align-content: center;
+   background: transparent;
+   border-radius: 4px;
+   border: 1px solid #2B65BC;
+   cursor: pointer;
+   font-family: roboto, sans-serif;
+   font-style: normal;
+   font-weight: 400;
+   font-size: 16px;
+   line-height: 0px;
+   text-decoration: none;
+   color: #2B65BC;
+   margin-left: 8px;
+}
+
+.secBtn:hover {
+   color: #114A9E;
+   text-decoration: underline;
+}
+
 .fa-arrow-up-right-from-square {
    padding-left: 8px;
 }
@@ -184,11 +214,6 @@ p {
    font-size: 16px;
    line-height: 0px;
    align-content: center;
-}
-
-.btn:hover {
-   background-color: #114A9E;
-   text-decoration: underline;
 }
 
 .link {
